# lfy

./: .gitignore  CMakeLists.txt  CMakePresets.json
include/: Config.hpp  LogRepository.hpp  Logger.hpp  Outputter.hpp  Types.hpp
include/Log4Yum/: Config.hpp  LogRepository.hpp  Logger.hpp  Outputter.hpp  Types.hpp
include/lfy/: Config.hpp  HeaderGen.hpp  LogRepository.hpp  Logger.hpp  Outputter.hpp  Repository.hpp  SegmentMap.hpp  SegmentTrie.hpp  Types.hpp
include/lfy/details/: NativeFileHandleLinux.hpp  NativeFileHandleWindows.hpp  NativeFileHandleWrapper.hpp  TimeLinux.hpp  TimeWindows.hpp  TimeWrapper.hpp
src/: dummy.cpp
